jena-shex/src/test/files/spec/negativeSyntax/tripleConsraint-with-datatype-and-valueSet.shex
# tripleConsraint with datatype and valueSet
<http://a.example/IssueShape> {
   <http://a.example/p1> <http://a.example/dt1> [<http://a.example/val1>]
}
